game/hover system

--- a/index.html
+++ b/index.html
@@ -12,16 +12,14 @@
     <body>
         <div id="main">
             <div id="quiz-container" class="content">
-                <span id="time"></span>
+                <span id="timer"></span>
 
                 <div id="grid">
 
                 </div>
 
                 <div class="button-container">
-                    <button onclick="createGridAndPath('easy')">Facile</button>
-                    <button onclick="createGridAndPath('medium')">Moyen</button>
-                    <button onclick="createGridAndPath('hard')">Difficile</button>
+                    <button onclick="startGame()">Démarrer une Partie</button>
                 </div>
             </div>
         </div>
